自己测试到了18结束

--- a/practice/000-git/test.html
+++ b/practice/000-git/test.html
@@ -1,123 +1,22 @@
-<style>
-  .row::before,
-  .row::after {
-    content: "";
-    clear:both;
-    display:block;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
+  p {
+    background: pink;
   }
-  .col,
-  .col-1,
-  .col-2,
-  .col-3,
-  .col-4,
-  .col-5,
-  .col-6,
-  .col-7,
-  .col-8,
-  .col-9,
-  .col-10,
-  .col-11,
-  .col-12 {
-    display: block;
-    float: left;
+  @media print {
+    p {
+      background: blue;
+    }
   }
-  .col-1 {
-    width: 8.333333333%;
-  }
-
-  .col-2 {
-    width: 16.666666666%;
-  }
-
-  .col-3 {
-    width: 25%;
-  }
-
-  .col-4 {
-    width: 33.3333333333%;
-  }
-
-  .col-5 {
-    width: 41.6666666666%;
-  }
-
-  .col-6 {
-    width: 50%;
-  }
-
-  .col-7 {
-    width: 58.33333333%;
-  }
-
-  .col-8 {
-    width: 66.666666666%;
-  }
-
-  .col-9 {
-    width: 75%;
-  }
-
-  .col-10 {
-    width: 83.33333333333%;
-  }
-
-  .col-11 {
-    width: 91.66666666666%;
-  }
-
-  .col-12 {
-    width: 100%;
-  }
-
-  /* .clear {
-    clear: both;
-  } */
-
-  /*========global end=========*/
-  .card {
-    min-height: 30px;
-    border: 1px solid #555;
-  }
-  .nav {
-    background: #ccc;
-  }
-</style>
-<div class="row">
-  <div class="col-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque maiores unde amet dolores obcaecati impedit, officia magni, libero aut debitis alias perferendis cupiditate odio commodi cum dolore tempora excepturi labore?</div>
-  <div class="col-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque maiores unde amet dolores obcaecati impedit, officia magni, libero aut debitis alias perferendis cupiditate odio commodi cum dolore tempora excepturi labore?</div>
-</div>
-
-<div class="row">
-  <div class="col-4">
-    <div class="card"></div>
-  </div>
-  <div class="col-4">
-    <div class="card"></div>
-  </div>
-  <div class="col-4">
-    <div class="card"></div>
-  </div>
-</div>
-<div class="nav row">
-  <a class="col-4" href="#">item</a>
-  <a class="col-4" href="#">item</a>
-  <a class="col-4" href="#">item</a>       
-</div>
-<div class="nav row">
-  <div style="float: left;">
-      <a href="#">item</a>
-      <a href="#">item</a>
-      <a href="#">item</a>
-      <a href="#">item</a>
-      <a href="#">item</a>
-  </div>
-  <div class="clear"></div>
-  <div style="float: right;">
-      <a href="#">item</a>
-      <a href="#">item</a>
-      <a href="#">item</a>
-      <a href="#">item</a>
-      <a href="#">item</a>
-  </div>
-</div>
-
+  </style>
+</head>
+<body>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci labore magni corporis veritatis, nobis, inventore saepe omnis minus alias, temporibus ratione dolores quis quibusdam delectus error enim! Beatae, modi libero.</p>
+</body>
+</html>
