--- a/project/001-mi.com/index.html
+++ b/project/001-mi.com/index.html
@@ -3,6 +3,8 @@
 <link rel="stylesheet" href="css/component/nav.global.css">
 <link rel="stylesheet" href="css/component/nav.page.css">
 <link rel="stylesheet" href="css/page/index.css">
+<link rel="stylesheet" href="css/component/foot.css">
+
 
 <div class="row nav global">
   <div class="container">
@@ -73,62 +75,338 @@
   <div class="container">
   <div class="row">
     <div class="col-lg-3">
-      <div class="card">1</div>
+      <div class="card"></div>
     </div>
     <div class="col-lg-3">
-      <div class="card">2</div>
+      <div class="card"></div>
     </div>
     <div class="col-lg-3">
-      <div class="card">3</div>
+      <div class="card"></div>
     </div>
     <div class="col-lg-3">
-      <div class="card">4</div>
+      <div class="card"></div>
     </div>
   </div>
   </div>
 </div>
 <div class="row">
   <div class="container">
+    <div class="row fast-buy-head">
+      <div class="col-lg-6 left">
+        <span class="title">小米闪购</span>
+      </div>
+      <div class="col-lg-6 right">
+      <span class="option-list">
+        <span class="option">查看全部</span>
+      </span>
+      </div>
+    </div>
     <div class="fast-buy">
     <div class="col-5">
-      <div class="card"></div>
+       <div class="card">
+          <div class="thumbnail">
+            <img  src="./img/mix2.jpg">
+          </div>
+          <div class="text"> 
+              <div class="title">小米 MIX2 全陶瓷</div>
+              <div class="desc">全面屏2.0 Unibody 全陶瓷</div>
+              <div class="price">3899元</div>
+          </div>
+        </div>
+    </div>
+    <div class="col-5">
+         <div class="card">
+          <div class="thumbnail">
+            <img  src="./img/mix2.jpg">
+          </div>
+          <div class="text"> 
+              <div class="title">小米 MIX2 全陶瓷</div>
+              <div class="desc">全面屏2.0 Unibody 全陶瓷</div>
+              <div class="price">3899元</div>
+          </div>
+        </div>
+    </div>
+    <div class="col-5">
+         <div class="card">
+          <div class="thumbnail">
+            <img  src="./img/mix2.jpg">
+          </div>
+          <div class="text"> 
+              <div class="title">小米 MIX2 全陶瓷</div>
+              <div class="desc">全面屏2.0 Unibody 全陶瓷</div>
+              <div class="price">3899元</div>
+          </div>
+        </div>
     </div>
     <div class="col-5">
         <div class="card">
-          <img  src="./img/mix2.jpg" alt="">
-          <span class="title">小米小米小米小米小米小米小米小米小米小米小米</span>
-          <span class="title_name">fadfaf</span>
-          <span>faff</span>
+          <div class="thumbnail">
+            <img  src="./img/mix2.jpg">
+          </div>
+          <div class="text"> 
+              <div class="title">小米 MIX2 全陶瓷</div>
+              <div class="desc">全面屏2.0 Unibody 全陶瓷</div>
+              <div class="price">3899元</div>
+          </div>
         </div>
     </div>
     <div class="col-5">
-        <div class="card"></div>
-    </div>
-    <div class="col-5">
-        <div class="card"></div>
-    </div>
-    <div class="col-5">
-        <div class="card"></div>
+         <div class="card">
+          <div class="thumbnail">
+            <img  src="./img/mix2.jpg">
+          </div>
+          <div class="text"> 
+              <div class="title">小米 MIX2 全陶瓷</div>
+              <div class="desc">全面屏2.0 Unibody 全陶瓷</div>
+              <div class="price">3899元</div>
+          </div>
+        </div>
     </div>
   </div>
   </div>
 </div>
 <div class="row">
   <div class="container">
+    <div class="main-cat-head">
+      <div class="col-lg-6">手机</div>
+      <div class="col-lg-6 right">查看全部</div>
+    </div>
     <div class="main-cat">
       <div class="col-2">
-        <div class="card long_jpg">
-          <img src="img/long.jpg" alt="">
+        <div>
+          <a href="#">
+          <img src="img/long.jpg" >
+          </a>
         </div>
       </div>
       <div class="col-8">
-    <div class="card right_imgs">
-      <div class="col right_img"></div>
-      <div class="col right_img"></div>
-      <div class="col right_img"></div>
-      <div class="col right_img"></div>
-    </div>
-  </div>
+        <div class="row">
+        <a href="#" class="col-lg-3 card">
+          <div class="thumbnail">
+            <img src="./img/mi6.jpg" alt="">
+          </div>
+          <div class="text">
+            <div class="title">小米6 4GB+64GB</div>
+            <div class="desc">变焦双摄，4 轴防抖，骁龙835 处理器</div>
+            <div class="price">2299元</div>
+          </div>
+        </a>
+
+        <a href="#" class="col-lg-3 card">
+          <div class="thumbnail">
+            <img src="./img/mi6.jpg" alt="">
+          </div>
+          <div class="text">
+            <div class="title">小米6 4GB+64GB</div>
+            <div class="desc">变焦双摄，4 轴防抖，骁龙835 处理器</div>
+            <div class="price">2299元</div>
+          </div>
+        </a>
+        <a href="#" class="col-lg-3 card">
+          <div class="thumbnail">
+            <img src="./img/mi6.jpg" alt="">
+          </div>
+          <div class="text">
+            <div class="title">小米6 4GB+64GB</div>
+            <div class="desc">变焦双摄，4 轴防抖，骁龙835 处理器</div>
+            <div class="price">2299元</div>
+          </div>
+        </a>
+        <a href="#" class="col-lg-3 card">
+          <div class="thumbnail">
+            <img src="./img/mi6.jpg" alt="">
+          </div>
+          <div class="text">
+            <div class="title">小米6 4GB+64GB</div>
+            <div class="desc">变焦双摄，4 轴防抖，骁龙835 处理器</div>
+            <div class="price">2299元</div>
+          </div>
+        </a>         
+      </div>
+      <div class="row">
+        <a href="#" class="col-lg-3 card">
+          <div class="thumbnail">
+            <img src="./img/mi6.jpg" alt="">
+          </div>
+          <div class="text">
+            <div class="title">小米6 4GB+64GB</div>
+            <div class="desc">变焦双摄，4 轴防抖，骁龙835 处理器</div>
+            <div class="price">2299元</div>
+          </div>
+        </a>
+
+        <a href="#" class="col-lg-3 card">
+          <div class="thumbnail">
+            <img src="./img/mi6.jpg" alt="">
+          </div>
+          <div class="text">
+            <div class="title">小米6 4GB+64GB</div>
+            <div class="desc">变焦双摄，4 轴防抖，骁龙835 处理器</div>
+            <div class="price">2299元</div>
+          </div>
+        </a>
+        <a href="#" class="col-lg-3 card">
+          <div class="thumbnail">
+            <img src="./img/mi6.jpg" alt="">
+          </div>
+          <div class="text">
+            <div class="title">小米6 4GB+64GB</div>
+            <div class="desc">变焦双摄，4 轴防抖，骁龙835 处理器</div>
+            <div class="price">2299元</div>
+          </div>
+        </a>
+        <a href="#" class="col-lg-3 card">
+          <div class="thumbnail">
+            <img src="./img/mi6.jpg" alt="">
+          </div>
+          <div class="text">
+            <div class="title">小米6 4GB+64GB</div>
+            <div class="desc">变焦双摄，4 轴防抖，骁龙835 处理器</div>
+            <div class="price">2299元</div>
+          </div>
+        </a>         
+      </div>
   </div>
   </div>
 </div>
+<div class="row">
+  <div class="container">
+    <div class="row extra-promotion-head">
+      <div class="col-lg-6 left">热评产品</div>
+      <div class="col-lg-6 right">空白待用</div>
+    </div>
+    <div class=" row extra-promotion">
+     <a href="#" class="col-lg-3">
+      <div class="card">
+        <div class="thumbnail">
+          <img src="./img/chazuo.jpg" alt="">
+        </div>
+        <div class="text">
+          <div class="title">东西真心不错，用过最好用的插线板，做工外观没得挑剔，3个USB接口很实用，充电快，建议不包邮的应该在...</div>
+          <div class="desc">来自于 yinyin19891117 的评价</div>
+          <div class="price">小米插线板 | 49元</div>
+        </div>
+      </div>
+     </a>
+    <a href="#" class="col-lg-3">
+      <div class="card">
+        <div class="thumbnail">
+          <img src="./img/chazuo.jpg" alt="">
+        </div>
+        <div class="text">
+          <div class="title">东西真心不错，用过最好用的插线板，做工外观没得挑剔，3个USB接口很实用，充电快，建议不包邮的应该在...</div>
+          <div class="desc">来自于 yinyin19891117 的评价</div>
+          <div class="price">小米插线板 | 49元</div>
+        </div>
+      </div>
+    </a>
+    <a href="#" class="col-lg-3">
+      <div class="card">
+        <div class="thumbnail">
+          <img src="./img/chazuo.jpg" alt="">
+        </div>
+        <div class="text">
+          <div class="title">东西真心不错，用过最好用的插线板，做工外观没得挑剔，3个USB接口很实用，充电快，建议不包邮的应该在...</div>
+          <div class="desc">来自于 yinyin19891117 的评价</div>
+          <div class="price">小米插线板 | 49元</div>
+        </div>
+      </div>
+    </a>
+    <a href="#" class="col-lg-3">
+      <div class="card">
+        <div class="thumbnail">
+          <img src="./img/chazuo.jpg" alt="">
+        </div>
+        <div class="text">
+          <div class="title">东西真心不错，用过最好用的插线板，做工外观没得挑剔，3个USB接口很实用，充电快，建议不包邮的应该在...</div>
+          <div class="desc">来自于 yinyin19891117 的评价</div>
+          <div class="price">小米插线板 | 49元</div>
+        </div>
+      </div>
+    </a>
+  </div>
+  </div>
+</div>
+<div class="footer">
+    <div class="container">
+        <div class="row footer-top">
+            <div class="col-5"><a href="#">预约维修服务</a></div>
+            <div class="col-5"><a href="#">7天无理由退货</a></div>
+            <div class="col-5"><a href="#">15天免费换货</a></div>
+            <div class="col-5"><a href="#">满150元包邮</a></div>
+            <div class="col-5"><a href="#">520余家售后网点</a></div>        
+        </div>
+        <div class="row footer-middle">
+            <div class="col-lg-10">
+             <div class="row ">
+                 <div>
+                 <div class="col-lg-2"><span>帮助中心</span></div>
+                 <div class="col-lg-2"><span>帮助中心</span></div>
+                 <div class="col-lg-2"><span>帮助中心</span></div>
+                 <div class="col-lg-2"><span>帮助中心</span></div>
+                 <div class="col-lg-2"><span>帮助中心</span></div>
+                 <div class="col-lg-2"><span>帮助中心</span></div>
+                </div>
+                <div>
+                <div class="col-lg-2">
+                    <a href="#">账户管理</a>
+                    <a href="#">购物指南</a> 
+                    <a href="#">订单操作</a> 
+                </div>
+                 <div class="col-lg-2">
+                    <a href="#">账户管理</a>
+                    <a href="#">购物指南</a> 
+                    <a href="#">订单操作</a> 
+                 </div>
+                 <div class="col-lg-2">
+                    <a href="#">账户管理</a>
+                    <a href="#">购物指南</a> 
+                    <a href="#">订单操作</a> 
+                 </div>
+                 <div class="col-lg-2">
+                    <a href="#">账户管理</a>
+                    <a href="#">购物指南</a> 
+                    <a href="#">订单操作</a> 
+                 </div>
+                 <div class="col-lg-2">
+                    <a href="#">账户管理</a>
+                    <a href="#">购物指南</a> 
+                    <a href="#">订单操作</a> 
+                 </div>
+                 <div class="col-lg-2">
+                    <a href="#">账户管理</a>
+                    <a href="#">购物指南</a> 
+                    <a href="#">订单操作</a> 
+                 </div>
+                </div>
+
+             </div>   
+            </div>
+            <div class="col-lg-2 right">
+                <div class="number">400-100-5678</div>
+                <div>周一至周日 8:00-18:00
+                 <div>（仅收市话费） </div>       
+                </div>
+                <button>在线客服</button>
+            </div>
+        </div>
+        <div class="row footer-bottom">
+            <div class="col-lg-5">
+                <a href="#">米家</a>
+                <a href="#">米聊</a>
+                <a href="#">多看</a>
+                <a href="#">游戏</a>
+                <a href="#">米家</a>
+                <a href="#">米聊</a>
+                <a href="#">多看</a>
+                <a href="#">游戏</a>
+                 <a href="#">米家</a>
+                <a href="#">米聊</a>
+                <a href="#">多看</a>
+                <a href="#">游戏</a>
+            </div>
+            <div class="col-lg-5"></div>
+        </div>
+    </div>
+</div>
+
