--- a/practice/028-resume/index.html
+++ b/practice/028-resume/index.html
@@ -22,6 +22,13 @@
         <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae consequuntur unde error sunt quos expedita dicta id ea voluptate? Eum, sit quidem a fugit tenetur sunt aperiam quaerat. A, ratione!</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quae non veritatis voluptatibus esse, laborum commodi perspiciatis ratione. Molestias, nam dolor quia quo exercitationem fugiat praesentium. Velit consectetur doloribus architecto!</li>
     </ul>
+    <h3>京东华东京东派</h3>
+    <div>实习生</div>
+    <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae consequuntur unde error sunt quos expedita dicta id ea voluptate? Eum, sit quidem a fugit tenetur sunt aperiam quaerat. A, ratione!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quae non veritatis voluptatibus esse, laborum commodi perspiciatis ratione. Molestias, nam dolor quia quo exercitationem fugiat praesentium. Velit consectetur doloribus architecto!</li>
+    </ul>
+    
 </div>
 <div class="footer"></div>
 </div>
