--- a/practice/028-resume/index.html
+++ b/practice/028-resume/index.html
@@ -7,16 +7,16 @@
     <div>安徽省合肥市</div>
 </div>
 <div class="body">
-    <h2>教育经历</h2>
+    <h2>教育</h2>
     <hr>
     <h3>***大学</h3>
     <div>计算机相关专业本科</div>
     <ul>
         <li>GPA:*** | 荣誉奖项： 2015-2016 综合奖学金、ppt演讲第二名</li>
     </ul>
-    <h2>工作与实习经历</h2>
+    <h2>实践与学习</h2>
     <hr>
-    <h3>京东华东京东派</h3>
+    <h3>表严肃/baoyansu.com</h3>
     <div>实习生</div>
     <ul>
         <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae consequuntur unde error sunt quos expedita dicta id ea voluptate? Eum, sit quidem a fugit tenetur sunt aperiam quaerat. A, ratione!</li>
@@ -28,7 +28,26 @@
         <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae consequuntur unde error sunt quos expedita dicta id ea voluptate? Eum, sit quidem a fugit tenetur sunt aperiam quaerat. A, ratione!</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quae non veritatis voluptatibus esse, laborum commodi perspiciatis ratione. Molestias, nam dolor quia quo exercitationem fugiat praesentium. Velit consectetur doloribus architecto!</li>
     </ul>
-    
+    <h2>项目经历</h2>
+    <hr>
+    <h3><a href="https://0xbul1.github.io" alt="点击">blog</a></h3>
+    <div>hexo</div>
+    <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae consequuntur unde error sunt quos expedita dicta id ea voluptate? Eum, sit quidem a fugit tenetur sunt aperiam quaerat. A, ratione!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quae non veritatis voluptatibus esse, laborum commodi perspiciatis ratione. Molestias, nam dolor quia quo exercitationem fugiat praesentium. Velit consectetur doloribus architecto!</li>
+    </ul>
+    <h3><a href="#">resume</a></h3>
+    <div>div+css</div>
+    <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae consequuntur unde error sunt quos expedita dicta id ea voluptate? Eum, sit quidem a fugit tenetur sunt aperiam quaerat. A, ratione!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quae non veritatis voluptatibus esse, laborum commodi perspiciatis ratione. Molestias, nam dolor quia quo exercitationem fugiat praesentium. Velit consectetur doloribus architecto!</li>
+    </ul>
+    <h3>表食堂</h3>
+    <div>js+vue</div>
+    <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae consequuntur unde error sunt quos expedita dicta id ea voluptate? Eum, sit quidem a fugit tenetur sunt aperiam quaerat. A, ratione!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quae non veritatis voluptatibus esse, laborum commodi perspiciatis ratione. Molestias, nam dolor quia quo exercitationem fugiat praesentium. Velit consectetur doloribus architecto!</li>
+    </ul>
 </div>
 <div class="footer"></div>
 </div>
