--- a/practice/028-resume/index.html
+++ b/practice/028-resume/index.html
@@ -16,7 +16,7 @@
     </ul>
     <h2>实践与学习</h2>
     <hr>
-    <h3>表严肃/baoyansu.com</h3>
+    <h3><a href="http://biaoyansu.com">表严肃</a></h3>
     <div>实习生</div>
     <ul>
         <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae consequuntur unde error sunt quos expedita dicta id ea voluptate? Eum, sit quidem a fugit tenetur sunt aperiam quaerat. A, ratione!</li>
