add blog-index.html 2018.04.07 22.32

--- a/project/003-blog/index.html
+++ b/project/003-blog/index.html
@@ -28,9 +28,50 @@
             <div class="row main">
                 <div class="col-lg-12">
                     <div class="date">DEC 25 2017</div>
-                    <div><a class="title" href="#">On the Twenty-Ninth</a></div>
-                    <p class="page">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi eaque exercitationem blanditiis obcaecati esse eos provident voluptatum vel tempore cumque facilis perspiciatis, incidunt quaerat. Id necessitatibus porro alias quaerat dolore.</p>
-                    <div class="img"><img src="./img/main-bg-3.png" alt="">
+                    <div><span class="vertical-line"> | </span><a class="title" href="#">On a slow boat to China</a></div>
+                    <p class="page">我与良人初相识的那年春天，他带我细细游过城市公园里的青草地，我才发现，城市里的小草长得规规矩矩的，高矮差不多，草丛里甚少有杂草，娇娇嫩嫩地似小家碧玉般温婉，坐上去软软，摸上去也不扎手。乡村的青草地有巴根草、车前草、猪耳草、狗尾巴草...</p>
+                    <div class="img"><img src="./img/main-bg-3.png">
+                    </div>
+                    <div class="picture-annotation">He is in My Camera.</div>
+                    <div><a class="whole-page" href="#">Read more</a></div>
+                    <div class="category">Categories:<a href="#">Life</a></div>
+                    <div class="tag">Tags:
+                        <a href="#">emotion</a> ,
+                        <a href="#">home</a> ,
+                        <a href="#">Life</a> ,
+                        <a href="#">love</a>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class="date">DEC 25 2017</div>
+                    <div><span class="vertical-line"> | </span><a class="title" href="#">All Out of Love</a></div>
+                    <p class="page">前几年，忽然流行一种一根小青草的发饰，街上的女孩戴之，甚至娱乐主持人都头顶一根青草，眉开眼笑地主持节目，小青草成了彼年时尚的宠儿。我的小侄女，正侄年幼，常常顶着一根小青草，在家人面前，晃来晃去，好可爱。一根青草，一个小人，一个希望...</p>
+                    <div class="img"><img src="./img/main-bg-2.jpg">
+                    </div>
+                    <div class="picture-annotation">A Delicate pig girl.</div>
+                    <div><a class="whole-page" href="#">Read more</a></div>
+                    <div class="category">Categories:<a href="#">Life</a></div>
+                    <div class="tag">Tags:
+                        <a href="#">emotion</a> ,
+                        <a href="#">home</a> ,
+                        <a href="#">Life</a> ,
+                        <a href="#">love</a>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class="date">DEC 25 2017</div>
+                    <div><span class="vertical-line"> | </span><a class="title" href="#">The Secret Life of Walter Mitty</a></div>
+                    <p class="page">这段马路伢的一端竖着一个木牌子，上面写着:花开满城。草皮刚浅绿，一种黄色的花卉已然开了，那是去年创文明城市时，种植的培养花卉，比自然界的野花开的早。它们迎着暖阳，迎着春风欣欣向荣地开放着，吸引着路人的眼眸。马路伢的另一边也竖着一木牌子，上面写:小草无言，请君惜之。城市里的小草真娇气，它们需要园林工人的呵护，也需要市民的爱护...</p>
+                    <div class="img"><img src="./img/main-bg-1.jpg">
+                    </div>
+                    <div class="picture-annotation">Always be there for you.</div>
+                    <div><a class="whole-page" href="#">Read more</a></div>
+                    <div class="category">Categories:<a href="#">Life</a></div>
+                    <div class="tag">Tags:
+                        <a href="#">emotion</a> ,
+                        <a href="#">home</a> ,
+                        <a href="#">Life</a> ,
+                        <a href="#">love</a>
                     </div>
                 </div>
             </div>
@@ -39,6 +80,28 @@
             <div class="search-area">
                 <input class="search-bar" type="text" placeholder="好好活着">
                 <input class="search-sign" type="image" src="./img/searchsign.svg">
+            </div>
+            <div class="recent-post">
+                <span>Recent Posts</span>
+                <a href="#">On a slow boat to China</a>
+                <a href="#">All Out of Love</a>
+                <a href="#">The Secret Life of Walter Mitty</a>
+            </div>
+            <div class="find-me">
+                <span>Find Me</span>
+                <div>Github:<a href="#">https://github.com/0xbul1</a></div>
+                <div>Stackoverflow:<a href="#">https://stackoverflow.com/0xbul1</a></div>
+                <div>Segmentfault:<a href="#">https://segmentfault.com/0xbul1</a></div>  
+            </div>
+            <div class="friend">
+                <span>Friends</span>
+                <div>林闽瑛-chiwo: <a href="#">https://github.com/m1n2y/m1n2y-class</a></div>
+                <div>刘枫荷-Lokey: <a href="#">https://github.com/irineliu/biao-class</a></div>
+                <div>周彤-zhoutong: <a href="#">https://github.com/zhoutongx/biao-class</a></div>
+                <div>肖阳-BANG: <a href="#">https://github.com/BANG666/biao-class</a></div>
+                <div>林择鑫-_Joe: <a href="#">https://github.com/noobjoe/biao-class</a></div>
+                <div>黎艳青: <a href="#">https://github.com/ahgedsh/biao-class</a></div>
+                <div>刘昌辉-飞毛腿: <a href="#">https://github.com/HFmt/biao-class</a></div>
             </div>
         </div>
         
