--- a/project/003-blog/index.html
+++ b/project/003-blog/index.html
@@ -106,5 +106,9 @@
         </div>
         
     </div>
-    <div class="row footer"></div>
+    <div class="row footer">
+        <div class="row">
+            <div class="col-lg-12">&copy; 2018 LIFE | DESIGNED & DEVELOPED BY 0xbul1</div>
+        </div>
+    </div>
 </div>
