add blog index.html 2018.04.08 21.17

--- a/project/003-blog/index.html
+++ b/project/003-blog/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="col-lg-4">
             <div class="search-area">
-                <input class="search-bar" type="text" placeholder="好好活着">
+                <input class="search-bar" type="text" placeholder="好好活着...">
                 <input class="search-sign" type="image" src="./img/searchsign.svg">
             </div>
             <div class="recent-post">
