--- a/practice/031-loop/for-12.8practice.html
+++ b/practice/031-loop/for-12.8practice.html
@@ -9,16 +9,56 @@
         newarr1plus = newarr1 + newarr1plus ;
         console.log('现在的总和为：' + newarr1plus);
     }
+    // console.log('现在的总和为：' + newarr1plus);
     //遍历['y', 'o', 'o', 'o']并将它们连接起来
     //==========================================
     var arr2 = ['y', 'o', 'o', 'o'];
     var newarr2plus = '';
-    for (var j = 0; j < arr2.length; j++){
-        var newarr2 = arr2[j];
+    for (var i =arr2.length-1; i>=0; i--){
+    // for (var j = 0; j < arr2.length; j++){
+        var newarr2 = arr2[i];
         console.log(newarr2);
         newarr2plus = newarr2 + newarr2plus;
         console.log('现在的总和为：'+ newarr2plus);
-        //如何倒序输出？？？？？？？？？？？？？？？
+        //如何其他方式倒序输出？？？？？？？？？？？？？？？
     }
-    遍历[1, 3, 2, 7, 6]并找出所有的偶数，将找到的所有偶数放到一个数组里。
+    // console.log('现在的总和为：'+ newarr2plus);
+    //遍历[1, 3, 2, 7, 6]并找出所有的偶数，将找到的所有偶数放到一个数组里。
+    // ===============================================
+    var arr3 = [1, 3, 2, 7, 6];
+    var k=0;
+    for (var i = 0; i < arr3.length; i++ ){
+        var newarr3 = arr3[i];
+        // console.log(newarr3);
+        // var k=0;
+        if(newarr3%2==0){
+            console.log(newarr3);
+            k++;
+            console.log(k);
+            // var arr = new Array(k-1);//数组长度
+            var arr = [];
+            for (var j = 0; j < k;j++){
+            // arr[j]=newarr3;
+            // console.log(arr);    
+            arr.push(newarr3);    
+            console.log(arr);
+            }
+        }
+        // var arrx=[];
+        // arrx[i]=newarr3;
+    //   console.log(arr);
+
+    }
+    //   console.log(arrx);
+
+    //4，通过遍历生成数组[1, 2, 3, 4, 5]。
+    //======================================
+
+// 5，遍历下方数组，
+// ['a1', 'a2', ['b1', 'b2', ['c1', 'c2', 'c3'], 'b3'], 'a3']
+    // var arr5 = ['a1', 'a2', ['b1', 'b2', ['c1', 'c2', 'c3'], 'b3'], 'a3'];
+    // for (var i = 0; i < arr5.length; i++){
+    //     var newarr5 = arr5[i];
+    //     console.log('diyiji' + newarr5);
+    // }
 </script>
