add something test.html2018.04.14  10-44

--- a/practice/031-loop/test.html
+++ b/practice/031-loop/test.html
@@ -117,7 +117,7 @@ console.log(rich); -->
         if (!item.name.startsWith('王')){
             continue;
         }
-        a.push(item.name);
+        a.push(item);
     }
     console.log(a);
 
