--- a/practice/046-github-fetcher/simple.html
+++ b/practice/046-github-fetcher/simple.html
@@ -49,3 +49,27 @@
     });
 
 </script>
+
+
+
+<!-- ==========自我练习部分====
+<script>
+    var username = 'biaoyansu';
+
+    // 准备发射
+    var http = new XMLHttpRequest();
+    // 怎么发射，往哪里发射呀
+    http.open('get','https:/api.github.com/users/' + username);
+    // 发射
+    http.send();
+
+    // 一旦触发load时间就说明请求结束了，数据返回了
+    http.addEventListener('load',function(){
+        // 这一步我们拿到的仅仅是字符串
+        var text = this.responseText;
+        
+        // 转换数据
+        var data  = JSON.parse(text);
+        console.log(data);
+    });
+</script> -->
