--- a/practice/048-github-search/test.html
+++ b/practice/048-github-search/test.html
@@ -135,7 +135,7 @@
     <div id="amount"></div>
     <div id="user-list"></div>
     <button id="next" class="block" hidden>加载更多</button>
-    <div class="tac" id="placeholer" hidden>谋了 - . -</div>
+    <div class="tac" id="placeholder" hidden>谋了 - . -</div>
 </div>
 
 <div class="toolbar">
@@ -168,18 +168,18 @@
             init();
 
         // }
-        search();
+        // search();
         function search() {
             // el_next.disabled = true;
             // el_next.innerText = '加载中...';
             var http = new XMLHttpRequest();
-            http.open('get', 'https://api.github.com/search/users?q=' + keyword + '&page' + page + '&per_page' + limit);
+            http.open('get', 'https://api.github.com/search/users?q=' + keyword + '&page=' + page + '&per_page=' + limit );
 
             http.send();
 
             http.addEventListener('load', function () {
                 res = JSON.parse(http.responseText);
-                // amount = res.total_count;
+                amount = res.total_count;
                 // render();
                 render();
                 console.log(res);
@@ -189,7 +189,7 @@
 
         }
         function render() {
-            var html = '';
+            var html = el_user_list.innerHTML;
             console.log(res);
             res.items.forEach(function (user) {
                 html = html +
@@ -206,6 +206,28 @@
             `;
             });
             el_user_list.innerHTML = html;
+            document
+            .getElementById('amount')
+            .innerHTML = `共有${res.total_count}条结果`;
+            el_next.hidden = false;
+           
+            no_more = page * limit >= amount;
+            console.log(limit);
+            /*
+            
+            el_next.hidden = no_more;
+            el_placeholer.hidden = !no_more;
+            */
+            /*如果没有更多*/
+            if(no_more) {
+                /*隐藏翻页按钮*/
+                el_next.hidden = true;
+                /*显示"谋了"*/
+                el_placeholer.hidden = false;
+            } else { // 否则正好相反
+                el_next.hidden = false;
+                el_placeholder.hidden = true;
+            }
         }
         function init() {
             detect_submit();
@@ -224,7 +246,8 @@
                     alert('别闹，讨厌(ノω<。)ノ))☆.。');
                     return;//1111
                 }
-
+                reset_page();
+                reset_user_list();
                 search(keyword);
             });
         }
