add 059 plugin test.js

--- a/practice/041-sidebar/test.html
+++ b/practice/041-sidebar/test.html
@@ -1,3 +1,5 @@
+
+<!-- css代码所在位置 -->
 <style>
     /* [hidden] {
         display: none;
@@ -42,6 +44,7 @@
          
     } */
 </style>
+<!-- html代码所在位置 -->
 <nav>
     <span id="menu-trigger">MENU</span>
 </nav>
@@ -57,7 +60,7 @@
     <div>item</div>
     <div>item</div>    
 </div>
-
+<!-- js代码所在位置 -->
 <script>
     var menu_trigger = document.querySelector('#menu-trigger')
     , menu_content = document.querySelector('#menu-content')
