--- a/practice/048-github-search/only-pagination.html
+++ b/practice/048-github-search/only-pagination.html
@@ -18,7 +18,7 @@
     }
 </script> -->
 <!-- 第二步开始按钮动态 -->
-<div id="pagination">
+<!-- <div id="pagination">
 
 </div>
 <script>
@@ -68,4 +68,53 @@
              });
          } 
     }
+</script> -->
+
+<div id="pagination"></div>
+<script>
+
+    var page_amount = 15
+    , max_btn_length = 5
+    , current_page = 1
+    ,el_pagination = document.getElementById('pagination')
+    ;
+
+    render();
+
+    function render(){
+        el_pagination.innerHTML = '';
+
+        var start
+        , end
+        , middle = Math.ceil(max_btn_length/2)
+        ,reaching_left = current_page <= middle
+        ,reaching_right = current_page >= page_amount-middle
+        ;
+    
+        if (reaching_left){
+            start = 1;
+            end = max_btn_length;
+        }else if (reaching_right){
+            start = page_amount - (max_btn_length - 1);
+            end = page_amount;
+        }else {
+            start = current_page - (middle - 1);
+            end = 
+        }
+    }
+
+
+    // function render(){
+    //     var el_pagination = document.getElementById('pagination')
+    //     , start = 1
+    //     , end = 10
+    //     ;
+
+    //     for (var i = 1; i <= end; i++){
+    //         var btn = document.createElement('button');
+    //         btn.innerText = i;
+    //         el_pagination.appendChild(btn);
+    //     }
+    // }
+    
 </script>
